 - Removed RotationUtils
 - EnumToValue
    - Removed EnumToValueDictionary, EnumToValue now handles all enum configurations
    - Ported data structures to a key value pair configuration. If you have issues with this, revert changes and switch to 2.4.5.
    - Fixed issues with multiple EnumToValues on the same object (or nested).
 - Added Icon to IAdvancedDropdownItem
 
## [2.4.5] - 2021-07-29
 - Added SerializedProperty.ReverseArray

## [2.4.4] - 2021-05-01
 - Added EditorUtils.GetFieldInfoFromProperty

## [2.4.3] - 2021-04-11
 - Added EditorUtils.GetSerializedTypeFromFieldInfo, returns the element type Unity would serialize for a given FieldInfo.

## [2.4.2] - 2021-03-29
 - Added a FindBackingProperty method for SerializedProperty
 - Added CreateAdvancedDropdownFromAttribute without generics.

## [2.4.1] - 2021-03-28
 - Added non-generic AdvancedDropdownUtil.CreateAdvancedDropdownFromType
 - Made various AdvancedDropdownUtil functions public
 - Fixed issues with EnumToValue additions
 - Added SerializedProperty.LogAllProperties

## [2.4.0] - 2020-12-29
 - Added AdvancedDropdownUtil additions that allow remapping types to multiple results
 - Changed AdvancedDropdownUtil functions to have a validate func parameter that allows for excluding results entirely

## [2.3.7] - 2020-12-03
  - Fixed key serialization with EnumToValueDictionary
  
## [2.3.6] - 2020-12-03
 - Fixed BuildSceneScope to function correctly when scenes are not active in Build Settings

## [2.3.5] - 2020-11-30
 - Added minimum size to the AdvancedDropdownUtils functions.

## [2.3.4] - 2020-11-30
 - Fix for EnumToValueDictionary drawers.
 - Fix for PooledListView not properly handling enable and disable with snapping active.

## [2.3.3] - 2020-11-18
 - Fixed PooledListView code running in edit-mode (and prefab mode at runtime) that caused start and end padding elements to be duplicated.

## [2.3.2] - 2020-11-17
 - Fixed layout issue for EnumToValue when using [HideFirstEnumValue].